<resources>
    <string name="app_name">Fire TV Xtream</string>
    <string name="save">Save</string>
    <string name="url_label">Xtream URL</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="channels_title">Channels</string>
    <string name="now_playing">Now Playing</string>
    <string name="back">Back</string>
    <string name="search_hint">Search</string>
    <string name="search_results_title">Search Results</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="loading">Loading...</string>
    <string name="epg_loading">Loading guide...</string>
    <string name="epg_not_available">EPG not available</string>
    <string name="epg_description_not_available">Description not available</string>
    <string name="settings">Settings</string>
    <string name="parental_control">Parental Control</string>
    <string name="enable_parental_control">Enable Parental Control</string>
    <string name="set_pin">Set PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="pin_label">PIN (4-6 digits)</string>
    <string name="confirm_pin_label">Confirm PIN</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="pin_mismatch">PINs do not match</string>
    <string name="pin_too_short">PIN must be 4-6 digits</string>
    <string name="pin_invalid_format">PIN must contain only digits</string>
    <string name="restricted_categories">Restricted Categories</string>
    <string name="select_categories">Select categories to restrict</string>
    <string name="no_restricted_categories">No restricted categories</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="parental_control_disabled">Parental Control is disabled</string>
    <string name="parental_control_enabled">Parental Control is enabled</string>
    <string name="play_pause">Play/Pause</string>
    <string name="skip_forward">Skip Forward 5 seconds</string>
    <string name="skip_back">Skip Back 5 seconds</string>
    <string name="next_channel">Next Channel</string>
    <string name="previous_channel">Previous Channel</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
</resources>
